clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/field_borrow_field/field_borrow_field.cbs
// RUN: %clang_cc1 -verify %s

typedef struct R {
    int a;
    int b;
} R;

typedef struct S {
    int * borrow p;
    int * borrow q;;
} S;

void use_mutI(int * borrow);
void use_constI(const int * borrow);

void test1() {
    R r = {.a = 1, .b = 2};
    S s = {.p = &mut r.a, .q = &mut r.b};
    use_mutI(s.p);
    use_mutI(s.q);
}

void test2() {
    R r = {.a = 1, .b = 2};
    S s = {.p = &mut r.a, .q = &mut r.b};
    int * borrow pp = &mut r.a; // expected-note {{previous borrow is here}}
    use_mutI(s.p); // expected-error {{There should be at most one mutable borrow targeting to 'r.a' at the same time}}
    use_mutI(pp);
}

void test3() {
    R r = {.a = 1, .b = 2};
    S s = {.p = &mut r.a, .q = &mut r.b};
    int * borrow p1 = s.p; // expected-note {{previous borrow is here}}
    use_mutI(s.p); // expected-error {{There should be at most one mutable borrow targeting to 'r.a' at the same time}}
    int * borrow p2 = p1;
}

void test4() {
    R r = {.a = 1, .b = 2};
    S s = {.p = &mut r.a, .q = &mut r.b};    // expected-note {{previous borrow is here}}
    r.a = 5;   // expected-error {{Can not modify 'r.a' because be borrowed}}
    s.q = s.p;
}

void test5() {
    R r = {.a = 1, .b = 2};
    S s = {.p = &mut r.a, .q = &mut r.b};    // expected-note {{previous borrow is here}}  expected-note {{previous borrow is here}}
    r.a = 5;   // expected-error {{Can not modify 'r.a' because be borrowed}}
    s.q = s.p;
    r.a = 5;   // expected-error {{Can not modify 'r.a' because be borrowed}}
    int *borrow p = s.q;
}